# smb_path_planner

./: LICENSE  README.md
smb_global_planner/: .gitignore  CMakeLists.txt  package.xml
smb_global_planner/launch/: smb_global_planner_bag.launch  smb_global_planner_real.launch  smb_global_planner_simulation_standalone.launch  smb_global_planner_smb_real.launch  smb_global_planner_smb_real_old.launch  smb_global_planner_summer_school.launch  smb_global_planner_velodyne_simulation.launch  voxblox_standalone_test.launch
smb_global_planner/src/: smb_global_planner_node.cpp
smb_global_planner/src/planner/: smb_global_planner.cpp  voxblox_ompl_rrt.cpp
smb_local_planner/: CMakeLists.txt  package.xml
smb_local_planner/include/smb_local_planner/: chomp_solver.h  smb_local_planner.h
smb_local_planner/launch/: smb_elevation_mapping_lidar.launch  smb_elevation_mapping_lidar_bag.launch  smb_elevation_mapping_lidar_summer_school.launch  smb_elevation_mapping_real.launch  smb_elevation_mapping_real_lidar.launch  smb_elevation_mapping_real_realsense_lidar.launch  smb_elevation_mapping_realsense.launch  smb_elevation_mapping_simulation.launch  smb_elevation_mapping_simulation_cad.launch  smb_elevation_mapping_simulation_lidar.launch  smb_elevation_mapping_simulation_sensors_and_cad.launch  smb_elevation_mapping_simulation_two_sensors.launch  smb_local_planner_voxblox_simulation.launch  smb_planner_real.launch  smb_planner_simulation.launch  smb_tf_listener.launch
smb_local_planner/src/: smb_local_planner_node.cpp
smb_local_planner/src/planner/: chomp_solver.cpp  smb_local_planner.cpp
smb_navigation/: .gitignore  CMakeLists.txt  README.md  package.xml
smb_navigation/config/: base_local_planner.yaml  base_local_planner_exploration.yaml  base_local_planner_sim.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params_ompl.yaml  local_costmap_params.yaml  local_costmap_params_traversability.yaml  move_base_global_planner.yaml  ompl_global_planner.yaml
smb_navigation/config/move_base_costmaps/: costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params_exploration.yaml  global_costmap_params_global_map.yaml  global_costmap_params_ompl.yaml  global_costmap_params_ompl_traversability.yaml  global_costmap_params_traversability.yaml  local_costmap_params.yaml  local_costmap_params_traversability.yaml
smb_navigation/config/point_cloud_processing_no_icp/: smb_lidar_filters.yaml  stream_sources.yaml
smb_navigation/config/terrain_adapter/: base_local_planner_road.yaml
smb_navigation/config/traversability_estimation/: elevation_mapping_smb_lidar.yaml  elevation_mapping_smb_realsense.yaml  gridmap_converter.yaml  robot_filter_parameter.yaml  traversability_estimation_smb.yaml
smb_navigation/data/basement/: map.yaml
smb_navigation/data/real/: garage_1400K.pgm  garage_1400K.yaml  wangen_2300K.pgm  wangen_2300K.yaml
smb_navigation/data/simulation/: map.pgm  map.yaml  map_sim.pgm  map_sim.yaml
smb_navigation/data/test/: map.pgm  map.yaml
smb_navigation/data/wangen/: map.yaml
smb_navigation/include/smb_navigation/: OdometryTransformer.h  PointCloudTransformer.h  gridmap_converter.h  path_interceptor.h  pcd_converter.h  terrain_adapter.h
smb_navigation/launch/: move_base.launch  move_base_ompl.launch  navigate2d.launch  navigate2d_cmu.launch  navigate2d_ompl.launch  navigate2d_ompl_terrain_adapter.launch  path_interceptor.launch  point_cloud_processing.launch  robosense.launch
smb_navigation/launch/mapping/: octomap_server.launch  pcd_converter.launch  point_cloud_to_scan.launch  robosense.launch  traversability_mapping.launch
smb_navigation/launch/utility/: path_interceptor.launch  pose_interceptor.launch
smb_navigation/script/: pcd_converter.rviz  pcd_to_grid_map_default_paths.py  pcd_to_gridmap.sh
smb_navigation/src/: OdometryTransformer.cpp  PointCloudTransformer.cpp  gridmap_converter.cpp  gridmap_converter_node.cpp  odom_interceptor_node.cpp  path_interceptor.cpp  pcd_converter.cpp  terrain_adapter.cpp
smb_navigation/src/nodes/: odometry_transformer_node.cpp  path_interceptor_node.cpp  pcd_converter_node.cpp  pointcloud_transformer_node.cpp  pose_interceptor_node.cpp  (+1 more)
smb_navigation_rviz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
smb_navigation_rviz/src/: edit_button.cpp  planning_interactive_markers.cpp  planning_panel.cpp  pose_widget.cpp  standalone_test.cpp
smb_navigation_scripts/: CMakeLists.txt  README.md  package.xml
smb_navigation_scripts/launch/: filter_pointcloud.launch  filter_pointcloud_ground.launch  follow_waypoints.launch  goal_from_plane.launch
smb_navigation_scripts/src/: filter_pcl_node.cpp
smb_ompl_planner/: CMakeLists.txt  README.md  bgp_plugin.xml  package.xml
smb_ompl_planner/launch/: move_base_ompl.launch  move_base_ompl_traversability.launch
smb_ompl_planner/src/: ompl_planner.cpp  ompl_planner_node.cpp  orientation_filter.cpp  rrt_planner.cpp
smb_path_planner/: CMakeLists.txt  package.xml
smb_planner_common/: CMakeLists.txt  package.xml
smb_planner_common/cfg/: elevation_mapping_smb.yaml  elevation_mapping_smb_lidar.yaml  elevation_mapping_smb_lidar_bag.yaml  elevation_mapping_smb_lidar_summer_school.yaml  elevation_mapping_smb_real_lidar.yaml  elevation_mapping_smb_realsense.yaml  elevation_mapping_smb_simulation.yaml  elevation_mapping_smb_simulation_cad.yaml  elevation_mapping_smb_simulation_lidar.yaml  elevation_mapping_smb_simulation_voxblox.yaml  smb_planner_parameters.yaml  smb_planner_parameters_bag.yaml  smb_planner_parameters_simulation.yaml  topics.yaml  topics_global_planning.yaml  traversability_filter_parameter.yaml
smb_planner_common/src/: planner_parameters.cpp  smb_pose_interceptor.cpp  smb_tf_interceptor.cpp  traversability_estimator.cpp  utility_mapping.cpp  utility_visualization.cpp
smb_planner_msgs/: CMakeLists.txt  package.xml
smb_planner_msgs/srv/: PlannerService.srv
traversability_layer/: CMakeLists.txt  README.md  costmap_plugins.xml  log  package.xml
traversability_layer/src/: traversability_layer.cpp
(+38 files in other folders)
