<?xml version="1.0"?>
<package format="2">
  <name>smb_global_planner</name>
  <version>1.0.0</version>
  
  <description>
  	The smb_global_planner package based on Voxblox and OMPL.
  </description>

  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>
  <license>BSD</license>
  <author email="lbartolomei@ethz.ch">Luca Bartolomei</author> 
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>ompl</depend>
  <depend>yaml_cpp_catkin</depend>
  <depend>smb_planner_msgs</depend>
  <depend>smb_planner_common</depend>

  <exec_depend>smb_planner_rviz</exec_depend>
  
</package>
