<?xml version="1.0"?>
<package format="2">
  <name>smb_navigation</name>
  <version>0.0.0</version>
  <description>The smb_navigation package</description>

  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>
  <author email="lbartolomei@ethz.ch">Luca Bartolomei</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>move_base</depend>
  <depend>teb_local_planner</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>robot_self_filter</depend>
  <depend>smb_ompl_planner</depend>
  <exec_depend>point_cloud_processor</exec_depend>
  <export>
  </export>
</package>
