<?xml version="1.0"?>
<package format="2">
  <name>smb_navigation_rviz</name>
  <version>0.0.0</version>
  <description>
    Planning plugin for RVIZ.
  </description>

  <author email="lbartolomei@mavt.ethz.ch">Luca Bartolomei</author>
  <maintainer email="lbartolomei@mavt.ethz.ch">Luca Bartolomei</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
