<?xml version="1.0"?>
<package format="2">
  <name>smb_ompl_planner</name>
  <version>1.0.0</version>
  <description>
     A path planner node based on grid map and OMPL.
  </description>

  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>
  <license>BSD</license>

  <author email="lbartolomei@ethz.ch">Luca Bartolomei</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>ompl</depend>

  <export>
      <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>

</package>
