<package>
  <name>smb_path_planner</name>
  <version>1.0.0</version>
  <description>
  	Global and local planning for SMB, based on voxblox as the map representation.
	</description>
	
  <maintainer email="lbartolomei@mavt.ethz.ch">Luca Bartolomei</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>smb_local_planner</run_depend>
  <run_depend>smb_global_planner</run_depend>
  <run_depend>smb_planner_common</run_depend>
  <run_depend>smb_planner_rviz</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
