<?xml version="1.0"?>
<package format="2">
  <name>smb_planner_common</name>
  <version>0.0.0</version>
  <description>
    Utilities for planning tasks for SMB.
  </description>

  <author email="lbartolomei@ethz.ch">Luca Bartolomei</author>
  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>elevation_mapping_demos</depend>
  <depend>traversability_estimation</depend>
  <depend>voxblox_ros</depend>
  <depend>eigen_catkin</depend>
  <depend>smb_msgs</depend>

</package>
