<?xml version="1.0"?>
<package format="2">
  <name>smb_planner_msgs</name>
  <version>3.3.2</version>
  <description>
    Messages for the SMB planner.
  </description>

	<author email="lbartolomei@ethz.ch">Luca Bartolomei</author>
  <license>BSD</license>
	<maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
