<?xml version="1.0"?>
<package format="2">
  <name>traversability_layer</name>
  <version>0.0.0</version>
  <description>
    The traversability_layer as a costmap_2d plugin. 
    It transforms an input traversability map into a costmap for move_base.
  </description>

  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>
  <author email="lbartolomei@ethz.ch">Luca Bartolomei</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>pluginlib</depend>
  <depend>costmap_2d</depend>
  <depend>grid_map_costmap_2d</depend>
  <depend>grid_map_ros</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
